--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
 	</nav>
 	<!-- END nav -->
 	
-	<div class="hero-wrap js-fullheight" style="background-image: url('images/Home-2.jpg');">
+	<div class="hero-wrap js-fullheight" style="background-image: url('images/home1.avif');">
 		<div class="overlay"></div>
 		<div class="container">
 			<div class="row no-gutters slider-text js-fullheight align-items-center" data-scrollax-parent="true">
@@ -72,9 +72,9 @@
 					<h1 class="mb-4">Qplus Technical Service LLC</h1>
 					<p style="font-size: 25px;font-weight: 400;color: darkgray;">"Building Trust With Quality"</p>
 				</div>
-				<!-- <a href="https://vimeo.com/45830194" class="icon-video popup-vimeo d-flex align-items-center justify-content-center mb-4">
+				<a href="https://vimeo.com/45830194" class="icon-video popup-vimeo d-flex align-items-center justify-content-center mb-4">
 					<span class="fa fa-play"></span>
-				</a> -->
+				</a>
 			</div>
 		</div>
 	</div>
