--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
 	</nav>
 	<!-- END nav -->
 	
-	<div class="hero-wrap js-fullheight" style="background-image: url('images/home1.avif');">
+	<div class="hero-wrap js-fullheight" style="background-image: url('images/home1.png');">
 		<div class="overlay"></div>
 		<div class="container">
 			<div class="row no-gutters slider-text js-fullheight align-items-center" data-scrollax-parent="true">
